; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gensupport.c_alter_test_for_insn.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gensupport.c_alter_test_for_insn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.queue_elem = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.queue_elem*, %struct.queue_elem*)* @alter_test_for_insn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @alter_test_for_insn(%struct.queue_elem* %0, %struct.queue_elem* %1) #0 {
  %3 = alloca %struct.queue_elem*, align 8
  %4 = alloca %struct.queue_elem*, align 8
  store %struct.queue_elem* %0, %struct.queue_elem** %3, align 8
  store %struct.queue_elem* %1, %struct.queue_elem** %4, align 8
  %5 = load %struct.queue_elem*, %struct.queue_elem** %3, align 8
  %6 = getelementptr inbounds %struct.queue_elem, %struct.queue_elem* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @XSTR(i32 %7, i32 1)
  %9 = load %struct.queue_elem*, %struct.queue_elem** %4, align 8
  %10 = getelementptr inbounds %struct.queue_elem, %struct.queue_elem* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @XSTR(i32 %11, i32 2)
  %13 = call i8* @join_c_conditions(i32 %8, i32 %12)
  ret i8* %13
}

declare dso_local i8* @join_c_conditions(i32, i32) #1

declare dso_local i32 @XSTR(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
